# venus-tpms-ble

./: Cargo.toml  README.md  README.zh-CN.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md  USAGE.zh-CN.md
gui/qml/: OverviewTpms.qml  PageTpms.qml  PageTpmsBind.qml  PageTpmsDiagnostics.qml  PageTpmsDiscovered.qml  PageTpmsSensorDetails.qml  PageTpmsWheel.qml
native/: bus_item.rs  linux.rs  main.rs  native_service.rs  state.rs
scripts/: build-armv7.sh  install.sh  uninstall.sh
service/: README.md  venus-tpms-ble.py
src/: bluez.rs  event.rs  lib.rs  main.rs  state.rs  venus.rs
tools/: README.md  mock_tpms_dbus.py
