[package]
name = "venus-tpms-ble"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Native Venus OS HCI receiver for BLE TPMS advertisements"

[features]
hci-test = []

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tpms-ble-parser = { git = "https://github.com/jkqq147/tpms-ble-parser.git", rev = "a7db9a72a10a07caec9398b64b40699cfc0edf9f", features = ["serde"] }
zbus = "5.17"

[dev-dependencies]
tempfile = "3"
